tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__op_parser__parse_infix_def_none.snap
---
source: src/tests/parser/stmt_parser/op_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 64,
        },
        kind: InfixDefine {
            symbol: "+",
            props: InfixOperatorProperties {
                precedence: 80,
                associativity: None,
                range: Range {
                    start: 23,
                    end: 62,
                },
            },
        },
    },
]
