tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__op_parser__parse_postfix_def.snap
---
source: src/tests/parser/stmt_parser/op_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 37,
        },
        kind: PostfixDefine {
            symbol: "!",
            props: PostfixOperatorProperties {
                precedence: 20,
                range: Range {
                    start: 21,
                    end: 35,
                },
            },
        },
    },
]
