tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__op_parser__parse_prefix_def.snap
---
source: src/tests/parser/stmt_parser/op_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 37,
        },
        kind: PrefixDefine {
            symbol: "-",
            props: PrefixOperatorProperties {
                precedence: 100,
                range: Range {
                    start: 20,
                    end: 35,
                },
            },
        },
    },
]
